update buttons && fix curtain overlap

--- a/styles/app.css
+++ b/styles/app.css
@@ -223,7 +223,7 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -340,10 +340,100 @@ html, body {
   opacity: 0;
 }
 
-.controls button, #startButton {
+.button {
+  pointer-events: auto;
+  cursor: pointer;
+  background: #e7e7e7;
+  border: none;
+  padding: 1.5rem 3rem;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  position: relative;
+  display: inline-block;
+  font-family: var(--text-headings);
+  width: 160px;
+}
+
+.button::before,
+.button::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.button--controls {
+  overflow: hidden;
+  font-size: 1.15rem;
+  border-radius: 0.85rem;
+  color: #fff;
+}
+
+.button--controls span {
+  display: block;
+  position: relative;
+  mix-blend-mode: difference;
+  z-index: 10;
+  text-transform: uppercase;
+}
+
+.button--controls:hover span {
+  animation: MoveScaleUpInitial 0.3s forwards, MoveScaleUpEnd 0.3s forwards 0.3s;
+}
+
+@keyframes MoveScaleUpInitial {
+  to {
+    transform: translate3d(0, -105%, 0) scale3d(1, 2, 1);
+    opacity: 0;
+  }
+}
+@keyframes MoveScaleUpEnd {
+  from {
+    transform: translate3d(0, 100%, 0) scale3d(1, 2, 1);
+    opacity: 0;
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+.button--controls::before {
+  content: "";
+  background: #000;
+  width: 120%;
+  height: 0;
+  padding-bottom: 120%;
+  top: -110%;
+  left: -10%;
+  border-radius: 50%;
+  transform: translate3d(0, 68%, 0) scale3d(0, 0, 0);
+}
+
+.button--controls:hover::before {
+  transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
+}
+
+.button--controls::after {
+  content: "";
+  background: #000;
+  transform: translate3d(0, -100%, 0);
+  transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
+}
+
+.button--controls:hover::after {
+  transform: translate3d(0, 0, 0);
+  transition-duration: 0.05s;
+  transition-delay: 0.4s;
+  transition-timing-function: linear;
+}
+
+#startButton, #resultsButton, #continueButton {
   background-color: transparent;
   border: 0;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(0, 0, 0, 0.7);
   width: 100px;
   height: 100px;
   font-weight: bold;
@@ -358,7 +448,7 @@ html, body {
   transition: transform 300ms ease-in-out 0s;
   position: relative;
 }
-.controls button img, #startButton img {
+#startButton img, #resultsButton img, #continueButton img {
   position: absolute;
   width: 100px;
   height: 100px;
@@ -370,10 +460,14 @@ html, body {
   transition: all 600ms ease;
 }
 @media (min-width: 768px) {
-  .controls button:hover, #startButton:hover {
+  #startButton:hover, #resultsButton:hover, #continueButton:hover {
     transform: scale(1.2);
     animation-duration: 10s;
   }
+}
+
+#resultsButton, #continueButton {
+  color: var(--color-on-bg);
 }
 
 #startButton {
