--- a/styles/layout/_base.scss
+++ b/styles/layout/_base.scss
@@ -136,7 +136,7 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
